Start of the homepage

--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-<p>Test</p>
+<h1>CodeJudist Github Website</h1>
+<p>Hello! welcome to my github website! This website is made for me, for a place to host mainly a portfolio, but also things about me and to be used as a blog!</p>
 </body>
 </html>
