--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
+<title>Judist Portfolio</title>
 <body>
 <h1>CodeJudist Github Website</h1>
-<p>Hello! welcome to my github website! This website is made for me, for a place to host mainly a portfolio, but also things about me and to be used as a blog!</p>
+<p>Hello! Welcome to my GitHub website! This website is made for me, for a place to host mainly a portfolio, but also things about me and to be used as a blog!</p>
 </body>
 </html>
