--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <title>Judist Portfolio</title>
 <body>
-  <divstyle="background-image: url('img_background.jpg');></divstyle>
+  <div style="background-image: url('img_background.jpg');">
 <h1>CodeJudist Github Website</h1>
 <p>Hello! Welcome to my GitHub website! This website is made for me, for a place to host mainly a portfolio, but also things about me and to be used as a blog!</p>
 </body>
