--- a/index.html
+++ b/index.html
@@ -2,8 +2,15 @@
 <html>
 <title>Judist Portfolio</title>
 <body>
-  <div style="background-image: url('img_background.jpg');">
-<h1>CodeJudist Github Website</h1>
-<p>Hello! Welcome to my GitHub website! This website is made for me, for a place to host mainly a portfolio, but also things about me and to be used as a blog!</p>
+  <style>
+    body {
+      background-image: url('img_background.jpg');
+      background-repeat: no-repeat;
+      background-attachment: fixed;
+      background-size: cover;
+    }
+    </style>
+<h1 style="color:white;">CodeJudist Github Website</h1>
+<p style="color: white;">Hello! Welcome to my GitHub website! This website is made for me, for a place to host mainly a portfolio, but also things about me and to be used as a blog!</p>
 </body>
 </html>
