--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
     </style>
 <h1 style="color:white;">CodeJudist Github Website</h1>
 <p style="color: white;">Hello! Welcome to my GitHub website! This website is made for me, for a place to host mainly a portfolio, but also things about me and to be used as a blog!</p>
+<br>
+<p style="color: white;">This website will very slowly be developed throughout my studies.</p>
+<br>
+<p style="color: white;">I do YouTube videos on Danish. I make funny moments with friends and add subtitles to the videos. Click right under to subscribe!</p>
+<br>
+<script src="https://apis.google.com/js/platform.js"></script>
+
+<div class="g-ytsubscribe" data-channelid="UCgND9CUORk822oxNnI3FtAA" data-layout="full" data-count="default"></div>
 </body>
 </html>
 
