--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
 <script src="https://apis.google.com/js/platform.js"></script>
 
 <div class="g-ytsubscribe" data-channelid="UCgND9CUORk822oxNnI3FtAA" data-layout="full" data-count="default"></div>
+<br>
+<p style="color: white;">I also have a spotify playlist that I'm proud of, with 300+ followers and still growing! Go follow both my profile and playlist under!</p>
+<br>
+<iframe src="https://open.spotify.com/follow/1/?uri=spotify:user:1194934126&size=detail&theme=dark" width="300" height="56" scrolling="no" frameborder="0" style="border:none; overflow:hidden;" allowtransparency="true"></iframe>
 </body>
 </html>
 
