--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 <p style="color: white;">I also have a spotify playlist that I'm proud of, with 300+ followers and still growing! Go follow both my profile and playlist under!</p>
 <br>
 <iframe src="https://open.spotify.com/follow/1/?uri=spotify:user:1194934126&size=detail&theme=dark" width="300" height="56" scrolling="no" frameborder="0" style="border:none; overflow:hidden;" allowtransparency="true"></iframe>
+<iframe src="https://open.spotify.com/embed/playlist/5Zqqbv1GyEV3RdFLmu7aLf" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
 </body>
 </html>
 
