--- a/index.html
+++ b/index.html
@@ -11,6 +11,39 @@
     }
     </style>
 <h1 style="color:white;">CodeJudist Github Website</h1>
+  <style>h1 {text-align:center;}</style>
+  <style>
+    ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
+}
+
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+/* Change the link color to #111 (black) on hover */
+li a:hover {
+  background-color: #111;
+}
+    </style>
+<ul>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="SpotifyPlaylistStats.html">Spotify Playlist Stats</a></li>
+    <li><a href="projects.html">Projects</a></li>
+    <li><a href="blog.html">Blog</a></li>
+</ul>
 <p style="color: white;">Hello! Welcome to my GitHub website! This website is made for me, for a place to host mainly a portfolio, but also things about me and to be used as a blog!</p>
 <br>
 <p style="color: white;">This website will very slowly be developed throughout my studies.</p>
