--- a/blog.html
+++ b/blog.html
@@ -1,49 +1,52 @@
 <!DOCTYPE html>
 <html>
-<title>Judist Portfolio</title>
-<body>
-  <style>
-    body {
-      background-image: url('img_background.jpg');
-      background-repeat: no-repeat;
-      background-attachment: fixed;
-      background-size: cover;
-    }
+  <title>Judist Portfolio</title>
+  <body>
+    <style>
+      body {
+        background-image: url("img_background.jpg");
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-size: cover;
+      }
     </style>
-<h1 style="color:white;">CodeJudist Github Website</h1>
-  <style>h1 {text-align:center;}</style>
-  <style>
-    ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background-color: #333;
-}
-
-li {
-  float: left;
-}
-
-li a {
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
-
-li a:hover {
-  background-color: #111;
-}
-
+    <h1 style="color: white">CodeJudist Github Website</h1>
+    <style>
+      h1 {
+        text-align: center;
+      }
     </style>
-<ul>
-    <li><a href="index.html">Home</a></li>
-    <li><a href="SpotifyPlaylistStats.html">Spotify Playlist Stats</a></li>
-    <li><a href="projects.html">Projects</a></li>
-    <li><a href="blog.html">Blog</a></li>
-</ul>
-<p style="color: white;">This is the start of the blog. Will be updated!</p>
-</body>
+    <style>
+      ul {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
+        background-color: #333;
+      }
+
+      li {
+        float: left;
+      }
+
+      li a {
+        display: block;
+        color: white;
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none;
+      }
+
+      li a:hover {
+        background-color: #111;
+      }
+    </style>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="SpotifyPlaylistStats.html">Spotify Playlist Stats</a></li>
+      <li><a href="projects.html">Projects</a></li>
+      <li><a href="blog.html">Blog</a></li>
+    </ul>
+    <p style="color: white">This is the start of the blog. Will be updated!</p>
+  </body>
 </html>
