--- a/index.html
+++ b/index.html
@@ -1,90 +1,125 @@
 <!DOCTYPE html>
 <html>
+  <title>Judist Portfolio</title>
   <head>
     <style>
       ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #333;
-  }
-  
-  li {
-    float: left;
-  }
-  
-  li a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-  }
-  
-  li a:hover {
-    background-color: #111;
-  }
-      </style>
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
+        background-color: #333;
+      }
+
+      li {
+        float: left;
+      }
+
+      li a {
+        display: block;
+        color: white;
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none;
+      }
+
+      li a:hover {
+        background-color: #111;
+      }
+    </style>
   </head>
-<title>Judist Portfolio</title>
-<body>
-  <style>
-    body {
-      background-image: url('img_background.jpg');
-      background-repeat: no-repeat;
-      background-attachment: fixed;
-      background-size: cover;
-    }
+  <body>
+    <style>
+      body {
+        background-image: url("img_background.jpg");
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-size: cover;
+      }
     </style>
-<h1 style="color:white;">CodeJudist Github Website</h1>
-  <style>h1 {text-align:center;}</style>
-  <style>
-    ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background-color: #333;
-}
-
-li {
-  float: left;
-}
-
-li a {
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
-
-li a:hover {
-  background-color: #111;
-}
+    <h1 style="color: white">CodeJudist Github Website</h1>
+    <style>
+      h1 {
+        text-align: center;
+      }
     </style>
-<ul>
-    <li><a class="active" href="index.html">Home</a></li>
-    <li><a href="spotifyPlaylists.html">Spotify Details</a></li>
-    <li><a href="SpotifyPlaylistStats.html">Spotify Playlist Stats</a></li>
-    <li><a href="projects.html">Projects</a></li>
-    <li><a href="blog.html">Blog</a></li>
-</ul>
-<p style="color: white;">Hello! Welcome to my GitHub website! This website is made for me, for a place to host mainly a portfolio, but also things about me and to be used as a blog!</p>
-<br>
-<p style="color: white;">This website will very slowly be developed throughout my studies.</p>
-<br>
-<p style="color: white;">I do YouTube videos on Danish. I make funny moments with friends and add subtitles to the videos. Click right under to subscribe!</p>
-<br>
-<script src="https://apis.google.com/js/platform.js"></script>
+    <style>
+      ul {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
+        background-color: #333;
+      }
 
-<div class="g-ytsubscribe" data-channelid="UCgND9CUORk822oxNnI3FtAA" data-layout="full" data-count="default"></div>
-<br>
-<p style="color: white;">I also have a spotify playlist that I'm proud of, with 300+ followers and still growing! Go follow both my profile and playlist under!</p>
-<br>
-<iframe src="https://open.spotify.com/follow/1/?uri=spotify:user:1194934126&size=detail&theme=dark" width="300" height="56" scrolling="no" frameborder="0" style="border:none; overflow:hidden;" allowtransparency="true"></iframe>
-<iframe src="https://open.spotify.com/embed/playlist/5Zqqbv1GyEV3RdFLmu7aLf" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-</body>
+      li {
+        float: left;
+      }
+
+      li a {
+        display: block;
+        color: white;
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none;
+      }
+
+      li a:hover {
+        background-color: #111;
+      }
+    </style>
+    <ul>
+      <li><a class="active" href="index.html">Home</a></li>
+      <li><a href="spotifyPlaylists.html">Spotify Details</a></li>
+      <li><a href="SpotifyPlaylistStats.html">Spotify Playlist Stats</a></li>
+      <li><a href="projects.html">Projects</a></li>
+      <li><a href="blog.html">Blog</a></li>
+    </ul>
+    <p style="color: white">
+      Hello! Welcome to my GitHub website! This website is made for me, for a
+      place to host mainly a portfolio, but also things about me and to be used
+      as a blog!
+    </p>
+    <br />
+    <p style="color: white">
+      This website will very slowly be developed throughout my studies.
+    </p>
+    <br />
+    <p style="color: white">
+      I do YouTube videos on Danish. I make funny moments with friends and add
+      subtitles to the videos. Click right under to subscribe!
+    </p>
+    <br />
+    <script src="https://apis.google.com/js/platform.js"></script>
+
+    <div
+      class="g-ytsubscribe"
+      data-channelid="UCgND9CUORk822oxNnI3FtAA"
+      data-layout="full"
+      data-count="default"
+    ></div>
+    <br />
+    <p style="color: white">
+      I also have a spotify playlist that I'm proud of, with 300+ followers and
+      still growing! Go follow both my profile and playlist under!
+    </p>
+    <br />
+    <iframe
+      src="https://open.spotify.com/follow/1/?uri=spotify:user:1194934126&size=detail&theme=dark"
+      width="300"
+      height="56"
+      scrolling="no"
+      frameborder="0"
+      style="border: none; overflow: hidden"
+      allowtransparency="true"
+    ></iframe>
+    <iframe
+      src="https://open.spotify.com/embed/playlist/5Zqqbv1GyEV3RdFLmu7aLf"
+      width="300"
+      height="380"
+      frameborder="0"
+      allowtransparency="true"
+      allow="encrypted-media"
+    ></iframe>
+  </body>
 </html>
-
